--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext .ts,.tsx",
+    "lintFix": "eslint src --ext .ts,.tsx --fix",
     "preview": "vite preview"
   },
   "dependencies": {
